syntax = "proto3";

package orders.service.v1;

option go_package = "github.com/ivkhr/orderstream/internal/pb/orders_api";

import "models/order_model.proto";
import "google/api/annotations.proto";

service OrdersService {
  rpc Health(HealthRequest) returns (HealthResponse) {
    option (google.api.http) = {
      get: "/health"
    };
  }

  // Create / update / soft-delete order.
  rpc UpsertOrder(UpsertOrderRequest) returns (UpsertOrderResponse) {
    option (google.api.http) = {
      post: "/orders"
      body: "*"
    };
  }

  rpc GetOrderByID(GetOrderByIDRequest) returns (GetOrderByIDResponse) {
    option (google.api.http) = {
      get: "/orders/{order_id}"
    };
  }

  rpc GetOrderByExternalID(GetOrderByExternalIDRequest) returns (GetOrderByExternalIDResponse) {
    option (google.api.http) = {
      get: "/orders/by-external/{external_id}"
    };
  }
}

message HealthRequest {}
message HealthResponse {
  string status = 1; // "ok"
}

message UpsertOrderRequest {
  // empty or "0" => create
  string order_id = 1;
  string user_id = 2;
  string status = 3;       // optional; "deleted" => soft-delete
  string payload_json = 4; // required
}

message UpsertOrderResponse {
  string order_id = 1;
  string status = 2; // created|updated|deleted
}

message GetOrderByIDRequest {
  string order_id = 1;
}
message GetOrderByIDResponse {
  orders.models.v1.OrderModel order = 1;
}

message GetOrderByExternalIDRequest {
  string external_id = 1;
  string user_id = 2; // query param
}
message GetOrderByExternalIDResponse {
  orders.models.v1.OrderModel order = 1;
}


